overflow problem fix

--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ body {
     min-height: 100vh;
     display: grid;
     grid-template-rows: min-content 1fr;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 
